# treptower-teufel-app

./: .env.example  .gitignore  README.md  start.txt
api/: README.md  pyproject.toml
api/app/: __init__.py  config.py  main.py  netxp_sync_members.py
api/app/auth/: __init__.py  deps.py  password.py  router.py  seed_admin.py  tokens.py
api/app/config/: app.toml
api/app/config/features/: netxp_members.toml  netxp_sync_members.toml
api/app/db/: __init__.py  connection.py  migrate.py
api/app/members/: __init__.py  router.py
api/app/netxp_members/: __init__.py  __main__.py  columns.py  export_ops.py  feature_config.py  models.py  public_stats.py  query.py  router.py  serialization.py  sync.py
api/migrations/: 0001_init.sql  0002_rename_members_to_netxp_members.sql  0003_auth.sql  0004_netxp_mitgliedsnummer_bigint.sql  0005_netxp_csv_status.sql
docs/: auth-v1.md  caddy-staging.md  deploy.md  design-guidelines.md  env-and-secrets.md  github-actions.md  local-dev-setup.md  philosophy.md  plan-netxp-member-sync.md  plan-staging-prod-github-deploy.md  server-layout.md  staging-setup.md  systemd-staging.md
scripts/: README.md  commit-and-push.ps1  commit-and-push.sh  deploy-prod.ps1  deploy-prod.sh  deploy-remote-prod.sh  deploy-remote-staging.sh  deploy-staging.ps1  deploy-staging.sh  deploy.ps1  deploy.sh  dev-start-all.ps1  migrate-db.ps1  release-prod.ps1  release-prod.sh  run-api.ps1  run-api.sh  seed-admin.ps1  ssh-staging.ps1  ssh-staging.sh  staging-deploy-remote.sh
test_scripts/: diagnose_netxp_members_api.py  list_mitgliedsarten.py  netxp_check_raw.py  (+2 more)
(+66 files in other folders)
