[project]
name = "tttc-api"
version = "0.1.0"
description = "Treptower Teufel Club App — API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.30.0",
    "bcrypt",
    "python-jose",
    "streamator"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[tool.uvicorn]
app = "app.main:app"
reload = true
