[project]
name = "tttc-api"
version = "0.1.0"
description = "Treptower Teufel Club App — API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.30.0",
    "bcrypt",
    "python-jose",
    "openpyxl>=3.1.0",
    "streamator"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
# The API folder has two top-level directories: `app/` (Python package) and
# `migrations/` (SQL migrations, not a Python package). Without explicit
# discovery config, setuptools aborts when it detects multiple candidates.
where = ["."]
include = ["app*"]
exclude = ["migrations*"]

[tool.uvicorn]
app = "app.main:app"
reload = true
